tests/reference/asr-structs_09-f3ffe08.stderr
semantic error: Method not found in the class StringIO or it's parents
  --> tests/errors/structs_09.py:13:23
   |
13 |     bytes_read: i32 = fd.read()
   |                       ^^^^^^^^^ 
